--- a/second/index.html
+++ b/second/index.html
@@ -113,11 +113,11 @@
         <div class="main__method__actions">
           <div class="main__method__add">
             <label> Amount </label>
-            <input type="text" />
-            <button>Withdraw</button>
+            <input type="text" class="loan_amount" />
+            <button class="loan_check">Withdraw</button>
           </div>
-          <div class="main__method__cards">
-            Loan can only be Approved if
+          <div class="main__method__cards loan_result">
+            Loan can only be Approved if the account balance is atleast 10%of loan amount.
           </div>
         </div>
       </div>
